--- a/src/minislider.css
+++ b/src/minislider.css
@@ -1,12 +1,29 @@
 .minislider {
     position: relative;
     box-sizing: border-box;
-    overflow: hidden;
+    overflow: hidden !important;
     user-select: none;
+    --use-aspect-ratio: 1;
+    --aspect-ratio: calc(1 / 1); /* 1 : 1 aspect ratio */
     --bullet-color: #fff;
     --bullet-active-color: #999;
     --slide-color: #f0f0f0;
     --swipe: 400ms;
+}
+.minislider::before {
+    content: "";
+    position: relative;
+    display: block;
+    box-sizing: border-box;
+    background: none;
+    pointer-events: none;
+    z-index: 0;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    padding-bottom: calc(var(--use-aspect-ratio, 0) * 100% / var(--aspect-ratio, 1));
+    height: auto;
 }
 .minislider > .arrow {
     position: absolute;
@@ -20,7 +37,11 @@
     top: 50%;
     transform: translate(0, -50%);
     background: none;
-    z-index: 2;
+    z-index: 5;
+}
+.minislider > .arrow.disabled {
+    pointer-events: none;
+    opacity: 0.4;
 }
 .minislider > .arrow::before {
     content: "";
@@ -61,13 +82,14 @@
     bottom: 0;
     text-align: center;
     background: none;
+    z-index: 2;
 }
 .minislider > .bullets > .bullet {
     position: relative;
     display: inline-block;
     box-sizing: padding-box;
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     border: 4px solid transparent;
     border-radius: 50%;
     background: var(--bullet-color);
@@ -89,6 +111,7 @@
     width: calc(10 * 100%);
     height: 100%;
     user-select: none;
+    z-index: 1;
 }
 .minislider > .slider.swipe {
     transition-property: left;
