--- a/src/minislider.css
+++ b/src/minislider.css
@@ -3,12 +3,14 @@
     box-sizing: border-box;
     overflow: hidden !important;
     user-select: none;
-    --use-aspect-ratio: 1;
+    /*--horizontal-mode: 1;*/
+    --slides-per-area: 1;
     --aspect-ratio: calc(1 / 1); /* 1 : 1 aspect ratio */
+    --use-aspect-ratio: 1;
+    --swipe: 400ms;
     --bullet-color: #fff;
     --bullet-active-color: #999;
     --slide-color: #f0f0f0;
-    --swipe: 400ms;
 }
 .minislider::before {
     content: "";
@@ -22,7 +24,7 @@
     margin: 0;
     padding: 0;
     width: 100%;
-    padding-bottom: calc(var(--use-aspect-ratio, 0) * 100% / var(--aspect-ratio, 1));
+    padding-bottom: calc(var(--use-aspect-ratio, 0) * 100% / var(--slides-per-area, 1) / var(--aspect-ratio, 1));
     height: auto;
 }
 .minislider > .arrow {
@@ -109,7 +111,7 @@
     border: 0;
     top: 0;
     left: 0;
-    width: calc(10 * 100%);
+    width: calc(12 * 100%);
     height: 100%;
     user-select: none;
     z-index: 1;
@@ -129,7 +131,7 @@
     border: 0;
     top: 0;
     left: 0;
-    width: calc(100% / 10);
+    width: calc(100% / 12 / var(--slides-per-area, 1));
     height: 100%;
     background-color: var(--slide-color);
     background-image: none;
@@ -138,36 +140,42 @@
     background-size: cover;
     user-select: none;
 }
-/* up to 10 slides supported */
+/* up to 12 slides supported */
 .minislider > .slider > .slide:nth-child(1) {
-    left: calc(0 * 100% / 10);
+    left: calc(0 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(2) {
-    left: calc(1 * 100% / 10);
+    left: calc(1 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(3) {
-    left: calc(2 * 100% / 10);
+    left: calc(2 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(4) {
-    left: calc(3 * 100% / 10);
+    left: calc(3 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(5) {
-    left: calc(4 * 100% / 10);
+    left: calc(4 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(6) {
-    left: calc(5 * 100% / 10);
+    left: calc(5 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(7) {
-    left: calc(6 * 100% / 10);
+    left: calc(6 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(8) {
-    left: calc(7 * 100% / 10);
+    left: calc(7 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(9) {
-    left: calc(8 * 100% / 10);
+    left: calc(8 * 100% / 12 / var(--slides-per-area, 1));
 }
 .minislider > .slider > .slide:nth-child(10) {
-    left: calc(9 * 100% / 10);
+    left: calc(9 * 100% / 12 / var(--slides-per-area, 1));
+}
+.minislider > .slider > .slide:nth-child(11) {
+    left: calc(10 * 100% / 12 / var(--slides-per-area, 1));
+}
+.minislider > .slider > .slide:nth-child(12) {
+    left: calc(11 * 100% / 12 / var(--slides-per-area, 1));
 }
 @media (max-width: 420px) {
 .minislider > .arrow {
